--- a/fop/fop.cabal
+++ b/fop/fop.cabal
@@ -17,8 +17,10 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Fop12_1
+                     , Fop12_2
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
+                     , pretty >=1.1 && <1.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
