--- a/fop/fop.cabal
+++ b/fop/fop.cabal
@@ -25,3 +25,12 @@ library
                      , pretty >=1.1 && <1.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+Test-Suite doctest
+  Type:                 exitcode-stdio-1.0
+  Default-Language:     Haskell2010
+  -- HS-Source-Dirs:       test
+  Ghc-Options:          -threaded -Wall
+  Main-Is:              doctests.hs
+  Build-Depends:        base
+                      , doctest >= 0.9.3
