Added Fop12_4 to .cabal and doctest.

--- a/fop/fop.cabal
+++ b/fop/fop.cabal
@@ -19,6 +19,7 @@ library
   exposed-modules:     Fop12_1
                      , Fop12_2
                      , Fop12_3
+                     , Fop12_4
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
