--- a/pack/pack.cabal
+++ b/pack/pack.cabal
@@ -18,8 +18,12 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     NT
+                     , Pack
+                     , Functor
   -- other-modules:       
   other-extensions:    DeriveFunctor, FlexibleContexts, RankNTypes, StandaloneDeriving, UndecidableInstances
-  build-depends:       base >=4.7 && <4.8, transformers >=0.4 && <0.5
+  build-depends:       base >=4.7 && <4.8
+                     , transformers >=0.3 && <0.4
+                     , syb >=0.4 && <0.5
   -- hs-source-dirs:      
   default-language:    Haskell2010
