--- a/lens/lens-excercise.cabal
+++ b/lens/lens-excercise.cabal
@@ -17,6 +17,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Basic
+                     , Lens
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
