--- a/lens/lens-exercise.cabal
+++ b/lens/lens-exercise.cabal
@@ -18,11 +18,15 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Basic
                      , Lens
+                     , CP
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
                      , basic-lens >=0.0 && <0.1
                      , lens >=4.7 && <4.8
                      , mtl >=2.1 && <2.2
+                     , fgl >=5.5 && <5.6
+                     , containers >=0.5 && <0.6
+                     , fuzzy >=0.1 && <0.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
