--- a/monad/monad-exercise.cabal
+++ b/monad/monad-exercise.cabal
@@ -17,10 +17,13 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Reader
+                     , RWST
+                     , RWSSTLens
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
                      , mtl >=2.1 && <2.2
                      , containers >=0.5 && <0.6
+                     , lens >=4.7 && <4.8
   -- hs-source-dirs:      
   default-language:    Haskell2010
