--- a/monad/monad-exercise.cabal
+++ b/monad/monad-exercise.cabal
@@ -16,14 +16,21 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Reader
-                     , RWST
+  exposed-modules:     ListT
+                     , MonadLaziness
                      , RWSSTLens
+                     , RWST
+                     , Reader
+                     , STMonad
+                     , StateT_ST
+                     , Writer
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
                      , mtl >=2.1 && <2.2
                      , containers >=0.5 && <0.6
                      , lens >=4.7 && <4.8
+                     , lens-action >=0.1 && <0.2
+
   -- hs-source-dirs:      
   default-language:    Haskell2010
