--- a/lens/lens-exercise.cabal
+++ b/lens/lens-exercise.cabal
@@ -22,8 +22,12 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
-                     , basic-lens >=0.0 && <0.1
                      , lens >=4.7 && <4.8
+                     , lens-action >=0.1 && <0.2
+                     , lens-family >=1.2 && <1.3
+                     , lens-family-core >=1.2 && <1.3
+                     , lens-family-th >=0.4 && <0.5
+                     , basic-lens >=0.0 && <0.1
                      , mtl >=2.1 && <2.2
                      , fgl >=5.5 && <5.6
                      , containers >=0.5 && <0.6
