--- a/graphics/graphics.cabal
+++ b/graphics/graphics.cabal
@@ -25,3 +25,14 @@ library
                      , lens
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+Executable graphics-test
+  Default-Language:     Haskell2010
+  Main-Is:              Graphics.hs
+  -- Other-Modules:
+  GHC-Options:          -Wall -O2
+  build-depends:       base
+                     , array
+                     , JuicyPixels
+                     , lens
+
