Modified image processes. (not work yet)

--- a/graphics/graphics.cabal
+++ b/graphics/graphics.cabal
@@ -49,3 +49,4 @@ Executable waifu2x
                      , bytestring
                      , array
                      , vector
+                     , deepseq
