--- a/graphics/graphics.cabal
+++ b/graphics/graphics.cabal
@@ -15,15 +15,6 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
-library
-  exposed-modules:     Graphics
-  -- other-modules:       
-  -- other-extensions:    
-  build-depends:       base
-                     , JuicyPixels
-  -- hs-source-dirs:      
-  default-language:    Haskell2010
-
 Executable conv
   Default-Language:     Haskell2010
   Main-Is:              ConvMain.hs
@@ -39,6 +30,8 @@ Executable waifu2x
   Main-Is:              Waifu2x.hs
   -- Other-Modules:
   GHC-Options:          -Wall -O2
+  -- GHC-Options:          -Wall -O2 -rtsopts -fprof-auto
+  -- GHC-Options:          -Wall -O2 -rtsopts -prof -fprof-auto
   build-depends:       base
                      , transformers
                      , mtl
@@ -50,3 +43,22 @@ Executable waifu2x
                      , array
                      , vector
                      , deepseq
+
+Executable waifu2xrepa
+  Default-Language:     Haskell2010
+  Main-Is:              Waifu2xRepa.hs
+  -- Other-Modules:
+  GHC-Options:          -Wall -O2 -threaded
+  build-depends:       base
+                     , transformers
+                     , mtl
+                     , monad-journal
+                     , lens
+                     , aeson
+                     , bytestring
+                     , array
+                     , vector
+                     , deepseq
+                     , repa
+                     , JuicyPixels
+                     , JuicyPixels-repa
