WIP: Re-implementing waifu2x in Haskell/Repa.
Modified to force evaluation on each step.

--- a/graphics/graphics.cabal
+++ b/graphics/graphics.cabal
@@ -49,6 +49,8 @@ Executable waifu2xrepa
   Main-Is:              Waifu2xRepa.hs
   -- Other-Modules:
   GHC-Options:          -Wall -O2 -threaded
+  -- GHC-Options:          -Wall -O2 -threaded -rtsopts -fprof-auto
+  -- GHC-Options:          -Wall -O2 -threaded -fllvm
   build-depends:       base
                      , transformers
                      , mtl
