--- a/pack/pack.cabal
+++ b/pack/pack.cabal
@@ -32,5 +32,6 @@ library
                      , syb >=0.4 && <0.5
                      , constraints >=0.4 && <0.5
                      , monad-control >=1.0 && <1.1
+                     , lens
   -- hs-source-dirs:      
   default-language:    Haskell2010
