--- a/pack/pack.cabal
+++ b/pack/pack.cabal
@@ -25,13 +25,15 @@ library
                      , Unlift
   -- other-modules:       
   other-extensions:    DeriveFunctor, FlexibleContexts, RankNTypes, StandaloneDeriving, UndecidableInstances
-  build-depends:       base >=4.7 && <4.8
-                     , containers >=0.5 && <0.6
-                     , transformers >=0.3 && <0.4
-                     , mtl >=2.1 && <2.2
-                     , syb >=0.4 && <0.5
-                     , constraints >=0.4 && <0.5
-                     , monad-control >=1.0 && <1.1
+  build-depends:       base
+                     , containers
+                     , transformers
+                     , mtl
+                     , syb
+                     , constraints
+                     , monad-control
                      , lens
+                     , newtype
+                     , natural-transformation
   -- hs-source-dirs:      
   default-language:    Haskell2010
