--- a/monad/monad-exercise.cabal
+++ b/monad/monad-exercise.cabal
@@ -26,11 +26,12 @@ library
                      , Writer
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8
-                     , mtl >=2.1 && <2.2
-                     , containers >=0.5 && <0.6
-                     , lens >=4.7 && <4.8
-                     , lens-action >=0.1 && <0.2
+  build-depends:       base >=4.7
+                     , mtl >=2.1
+                     , containers >=0.5
+                     , lens >=4.7
+                     , lens-action >=0.1
+                     , operational >= 0.2
 
   -- hs-source-dirs:      
   default-language:    Haskell2010
