--- a/cp/cp.cabal
+++ b/cp/cp.cabal
@@ -6,7 +6,7 @@ version:             0.1.0.0
 -- synopsis:            
 -- description:         
 license:             BSD3
-license-file:        LICENSE
+license-file:        ../LICENSE
 author:              notae
 maintainer:          notae@me.com
 -- copyright:           
@@ -17,12 +17,15 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     TypedCP
+                     , TypedCP2
+                     , RangedInt
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base
                      , transformers
                      , mtl
                      , containers
+                     , template-haskell
                      , operational
   -- hs-source-dirs:      
   default-language:    Haskell2010
