--- a/cp/cp.cabal
+++ b/cp/cp.cabal
@@ -19,6 +19,7 @@ library
   exposed-modules:     TypedCP
                      , TypedCP2
                      , RangedInt
+                     , SBVTest
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base
@@ -27,5 +28,7 @@ library
                      , containers
                      , template-haskell
                      , operational
+                     , syb
+                     , sbv
   -- hs-source-dirs:      
   default-language:    Haskell2010
