--- a/cp/cp.cabal
+++ b/cp/cp.cabal
@@ -29,6 +29,6 @@ library
                      , template-haskell
                      , operational
                      , syb
-                     , sbv
+                     , sbv >= 5.7
   -- hs-source-dirs:      
   default-language:    Haskell2010
