Added examples for sized lists with sbv.

--- a/cp/cp.cabal
+++ b/cp/cp.cabal
@@ -19,6 +19,7 @@ library
   exposed-modules:     TypedCP
                      , TypedCP2
                      , RangedInt
+                     , SBVExts
                      , SBVTest
                      , SBVTest2
   -- other-modules:       
