--- a/cp/stack.yaml
+++ b/cp/stack.yaml
@@ -8,8 +8,7 @@ packages:
 - '.'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps:
-  - sbv-5.7
+extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 flags: {}
