--- a/cp/cp.cabal
+++ b/cp/cp.cabal
@@ -21,9 +21,14 @@ library
   exposed-modules:     TypedCP
                      , TypedCP2
                      , RangedInt
+                     , Modular
+                     , Mod
                      , SBVExts
+                     , SBVExts2
                      , SBVTest
                      , SBVTest2
+                     , SBVTest3
+                     , SBVTest4
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base
@@ -34,5 +39,6 @@ library
                      , operational
                      , syb
                      , sbv >= 5.7
+                     , random
   -- hs-source-dirs:      
   default-language:    Haskell2010
