Add sbvPlugin to dependencies.

--- a/cp/cp.cabal
+++ b/cp/cp.cabal
@@ -39,6 +39,7 @@ library
                      , operational
                      , syb
                      , sbv >= 5.7
+                     , sbvPlugin
                      , random
                      , modular-arithmetic
   -- hs-source-dirs:      
