--- a/pack/pack.cabal
+++ b/pack/pack.cabal
@@ -17,6 +17,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
+  ghc-options:         -Wall
   exposed-modules:     NT
                      , Pack
                      , Pack2
@@ -27,6 +28,7 @@ library
                      , Pack7
                      , Pack8
                      , Pack9
+                     , Pack10
                      , Container
                      , Container2
                      , Container3
@@ -46,5 +48,7 @@ library
                      , lens
                      , newtype
                      , natural-transformation
+                     , syb
+                     , uniplate
   -- hs-source-dirs:      
   default-language:    Haskell2010
