--- a/cp/cp.cabal
+++ b/cp/cp.cabal
@@ -42,5 +42,7 @@ library
                      , sbvPlugin
                      , random
                      , modular-arithmetic
+                     , lens
+                     , data-default
   -- hs-source-dirs:      
   default-language:    Haskell2010
